--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
     "husky": "^4.3.7",
-    "lerna": "^4.0.0",
+    "lerna": "^6.0.0",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
     "lint-staged": "^10.5.3",
@@ -70,8 +70,5 @@
     "vue-loader": "^16.2.0",
     "yarn": "^1.22.10"
   },
-  "license": "MIT",
-  "dependencies": {
-    "vue-docgen-api": "^4.40.0"
-  }
+  "license": "MIT"
 }
